crates/php-parser/tests/snapshots/integration__match_expression.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
$result = match ($x) {
    'a', 'b' => 'first',
    'c' => 'second',
    default => 'other',
};

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "result"
                },
                "span": {
                  "start": 6,
                  "end": 13
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Match": {
                    "subject": {
                      "kind": {
                        "Variable": "x"
                      },
                      "span": {
                        "start": 23,
                        "end": 25
                      }
                    },
                    "arms": [
                      {
                        "conditions": [
                          {
                            "kind": {
                              "String": "a"
                            },
                            "span": {
                              "start": 33,
                              "end": 36
                            }
                          },
                          {
                            "kind": {
                              "String": "b"
                            },
                            "span": {
                              "start": 38,
                              "end": 41
                            }
                          }
                        ],
                        "body": {
                          "kind": {
                            "String": "first"
                          },
                          "span": {
                            "start": 45,
                            "end": 52
                          }
                        },
                        "span": {
                          "start": 33,
                          "end": 52
                        }
                      },
                      {
                        "conditions": [
                          {
                            "kind": {
                              "String": "c"
                            },
                            "span": {
                              "start": 58,
                              "end": 61
                            }
                          }
                        ],
                        "body": {
                          "kind": {
                            "String": "second"
                          },
                          "span": {
                            "start": 65,
                            "end": 73
                          }
                        },
                        "span": {
                          "start": 58,
                          "end": 73
                        }
                      },
                      {
                        "conditions": null,
                        "body": {
                          "kind": {
                            "String": "other"
                          },
                          "span": {
                            "start": 90,
                            "end": 97
                          }
                        },
                        "span": {
                          "start": 79,
                          "end": 97
                        }
                      }
                    ]
                  }
                },
                "span": {
                  "start": 16,
                  "end": 100
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 100
          }
        }
      },
      "span": {
        "start": 6,
        "end": 102
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 102
  }
}
